fixed release render from firebase with the addtition of new releases also fixed name alignment

--- a/src/components/Main/Artist/Profile/Profile.module.scss
+++ b/src/components/Main/Artist/Profile/Profile.module.scss
@@ -18,13 +18,16 @@
             h2 {
                 font-size: 36px;
                 font-family: "Montserrat Light";
+                text-align: left;
             }
 
             p {
                 font-family: "Montserrat Bold";
                 font-size: 20px;
                 color: #888888;
+                float:left;
             }
         }
     }
 }
+
